fixed mobile align item issue

--- a/src/components/mainSection/mainsection.module.scss
+++ b/src/components/mainSection/mainsection.module.scss
@@ -23,5 +23,6 @@
     flex-direction: column;
     height: 100%;
     overflow: hidden;
+    align-items: center;
   }
 }
